--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "printWidth": 80,
-  "useTabs": false
+  "useTabs": false,
+  "bracketSameLine": true
 }
