--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -68,6 +68,7 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           build-args: |
             STRAPI_ENDPOINT=${{ secrets.STRAPI_ENDPOINT }}
+            NEXT_PUBLIC_STRAPI_ENDPOINT=${{ secrets.STRAPI_ENDPOINT }}
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
