--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.7.0",
     "classnames": "^2.3.1",
+    "critters": "^0.0.10",
     "modern-normalize": "^1.1.0",
     "next": "11.1.2",
     "next-mdx-remote": "^3.0.4",
