--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@openapitools/openapi-generator-cli": "^2.4.12",
     "@types/node-fetch": "^3.0.2",
     "@types/react": "17.0.30",
+    "@types/react-dom": "^17.0.9",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
