--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.0.0",
     "prism-themes": "^1.9.0",
     "react": "17.0.2",
+    "react-charts": "^3.0.0-beta.33",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "rehype-autolink-headings": "^6.1.0",
