--- a/public/site-assets/staticwebapp.config.json
+++ b/public/site-assets/staticwebapp.config.json
@@ -7,6 +7,12 @@
       }
     },
     {
+      "route": "/_next/data/*",
+      "headers": {
+        "cache-control": "public,max-age=31536000,immutable"
+      }
+    },
+    {
       "route": "/",
       "headers": {
         "cache-control": "no-cache"
