--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: Main
+concurrency:
+  group: prod_deploy
+  cancel-in-progress: false
 
 on:
+  repository_dispatch:
+    types: [strapi_updated]
   push:
     branches:
       - master
@@ -11,7 +16,7 @@ on:
 
 jobs:
   lint_build_deploy:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    if: github.event_name == 'push' || github.event_name == 'repository_dispatch' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-20.04
     name: Build and Deploy
     steps:
