--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "type": "commonjs",
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
+    "@vanilla-extract/babel-plugin": "^1.0.1",
+    "@vanilla-extract/css": "^1.4.1",
+    "@vanilla-extract/next-plugin": "^1.0.0",
+    "@vanilla-extract/sprinkles": "^1.2.0",
     "classnames": "^2.3.1",
     "modern-normalize": "^1.1.0",
     "next": "11.1.2",
