--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "type": "commonjs",
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
-    "@vanilla-extract/babel-plugin": "^1.0.1",
-    "@vanilla-extract/css": "^1.4.1",
+    "@vanilla-extract/babel-plugin": "^1.1.2",
+    "@vanilla-extract/css": "^1.6.3",
     "@vanilla-extract/next-plugin": "^1.0.0",
-    "@vanilla-extract/sprinkles": "^1.2.0",
+    "@vanilla-extract/sprinkles": "^1.3.1",
     "classnames": "^2.3.1",
+    "lodash.omit": "^4.5.0",
     "modern-normalize": "^1.1.0",
     "next": "11.1.2",
     "next-mdx-remote": "^3.0.6",
@@ -29,6 +30,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "rehype-add-classes": "^1.0.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-external-links": "^1.0.0",
     "rehype-slug": "^5.0.0",
@@ -37,12 +39,16 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.4.12",
+    "@types/lodash.omit": "^4.5.6",
     "@types/react": "17.0.30",
     "@types/react-dom": "^17.0.9",
+    "clean-css": "^5.2.2",
+    "cssnano": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2"
   }
