--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "type": "commonjs",
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
+    "@stitches/react": "^1.2.5",
     "@vanilla-extract/babel-plugin": "^1.1.2",
     "@vanilla-extract/css": "^1.6.3",
-    "@vanilla-extract/next-plugin": "^1.0.0",
+    "@vanilla-extract/next-plugin": "^1.0.1",
     "@vanilla-extract/sprinkles": "^1.3.1",
     "classnames": "^2.3.1",
     "lodash.omit": "^4.5.0",
