--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,9 @@
   "cSpell.language": "en-GB",
   "cSpell.words": [
     "Aboutpage",
+    "brpaz",
     "govuk",
+    "maxage",
     "Projectspage",
     "rehype",
     "richardwillis",
