--- a/cloudformation/s3bucket_with_cloudfront.yml
+++ b/cloudformation/s3bucket_with_cloudfront.yml
@@ -51,7 +51,7 @@ Resources:
   S3BucketPolicy:
     Type: 'AWS::S3::BucketPolicy'
     Metadata:
-      Comment: 'Bucket policy to allow CloudFront to access the data'
+      Comment: 'Bucket policy to allow CloudFront & Public access'
     Properties:
       Bucket: !Ref S3Bucket
       PolicyDocument:
