--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "glob": "^7.2.0",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2"
   }
