--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "type": "commonjs",
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
+    "@next/bundle-analyzer": "^12.0.4",
     "classnames": "^2.3.1",
     "modern-normalize": "^1.1.0",
     "next": "11.1.2",
     "next-mdx-remote": "^3.0.6",
     "node-fetch": "^3.0.0",
+    "preact": "^10.6.1",
     "prism-themes": "^1.9.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
