--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,14 +80,14 @@ jobs:
       - name: Sync assets to S3
         if: (github.event_name == 'push' && github.ref == 'refs/heads/master') || github.event_name == 'repository_dispatch'
         run: |
-          aws s3 sync out/_next s3://${{ secrets.AWS_S3_BUCKET }}/_next --cache-control public,max-age=31536000,immutable --size-only
-          aws s3 sync out/site-assets s3://${{ secrets.AWS_S3_BUCKET }}/site-assets --cache-control public,max-age=31536000,immutable --size-only
-          aws s3 sync out s3://${{ secrets.AWS_S3_BUCKET }} --cache-control public,max-age=0,s-maxage=31536000,must-revalidate --exclude "*" --include "*.html"
+          aws s3 sync out/_next s3://${{ secrets.AWS_S3_BUCKET }}/root/_next --cache-control public,max-age=31536000,immutable --size-only
+          aws s3 sync out/site-assets s3://${{ secrets.AWS_S3_BUCKET }}/root/site-assets --cache-control public,max-age=31536000,immutable --size-only
+          aws s3 sync out s3://${{ secrets.AWS_S3_BUCKET }}/root --cache-control public,max-age=0,s-maxage=31536000,must-revalidate --exclude "*" --include "*.html"
 
       - name: Rename HTML files
         if: (github.event_name == 'push' && github.ref == 'refs/heads/master') || github.event_name == 'repository_dispatch'
         run: |
-          ./scripts/copy-s3-html-files.sh out ${{ secrets.AWS_S3_BUCKET }}
+          ./scripts/copy-s3-html-files.sh out "${{ secrets.AWS_S3_BUCKET }}/root"
 
       - name: Invalidate Cloudfront Cache
         if: (github.event_name == 'push' && github.ref == 'refs/heads/master') || github.event_name == 'repository_dispatch'
