--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -57,22 +57,22 @@ jobs:
           aws-region: us-east-1
 
       - name: AWS Static Stack
-        uses: badsyntax/github-action-aws-static-stack@v0.0.6
+        uses: badsyntax/github-action-aws-static-stack@v0.0.8
         if: github.actor != 'dependabot[bot]'
         with:
-          cf-stack-name: 'cloudfront-s3-richardwillis-info'
+          cf-stack-name: 'richardwillis-info-cloudfront-s3'
           cf-template: './cloudformation/cloudformation-s3bucket-stack.yml'
           cf-apply-change-set: ${{ github.event_name != 'repository_dispatch' }}
           token: ${{ secrets.GITHUB_TOKEN }}
           aws-region: 'us-east-1'
-          s3-bucket-name: 'assets.richardwillis.info-us-east-1'
+          s3-bucket-name: 'richardwillis.info-us-east-1'
           s3-allowed-origins: 'https://richardwillis.info, https://assets.richardwillis.inf'
           cloudfront-root-hosts: 'assets.richardwillis.info, richardwillis.info'
           cloudfront-preview-hosts: '*.preview.richardwillis.info'
           cloudfront-default-root-object: 'index'
           certificate-arn: ${{ secrets.ROOT_DOMAIN_CERTIFICATE_ARN }}
           src-dir: './out'
-          static-files-glob: '_next/**/*'
-          lambda-version: '1.0.3'
+          static-files-glob: '{_next,site-assets}/**/*'
+          lambda-version: '1.0.1'
           delete-preview-site-on-pr-close: true
           comment-template: '.github/pr-comment-template.hbs'
