--- a/.github/workflows/delete-preview-site.yml
+++ b/.github/workflows/delete-preview-site.yml
@@ -1,52 +1,16 @@
-name: Build, Test & Deploy
-
-concurrency:
-  group: prod_deploy
-  cancel-in-progress: false
+name: Delete Preview Site
 
 on:
-  repository_dispatch:
-    types: [strapi_updated]
-  push:
-    branches:
-      - master
   pull_request:
-    types: [opened, synchronize, reopened]
-    branches:
-      - master
+    types: [closed]
 
 jobs:
-  build-test-deploy:
+  delete-preview-site:
     runs-on: ubuntu-20.04
-    name: Build and Deploy
+    name: Delete Preview Site
+    if: github.actor != 'dependabot[bot]'
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2.4.1
-        with:
-          node-version: 16
-
-      - name: Install NPM Packages
-        run: npm ci
-        env:
-          NPM_CONFIG_FUND: false
-          NPM_CONFIG_AUDIT: false
-
-      - name: Lint
-        if: github.event_name != 'repository_dispatch'
-        run: npm run lint
-
-      - name: Cache .next
-        uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Build
-        run: npm run build
-        env:
-          STRAPI_ENDPOINT: ${{ secrets.STRAPI_ENDPOINT }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
